# pkg-with-runfiles

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  defs.bzl  go.mod
.github/workflows/: release-source-archive.yml
private/: BUILD  BUILD.bazel  packager.go  pkg_with_runfiles.bzl
tests/bzlmod-example-intermod/: test.sh
tests/bzlmod-example-intermod/data1/: MODULE.bazel
tests/bzlmod-example-intermod/data1fork/: BUILD.bazel  MODULE.bazel  message.txt
tests/bzlmod-example-intermod/rooty/: BUILD.bazel  MODULE.bazel  go.mod  main.go
tests/bzlmod-example-intermod/userofdata1/: BUILD.bazel  MODULE.bazel  main.go
