module(
    name = "rooty",
    version = "0.1",
)

bazel_dep(name = "pkg_with_runfiles", version = "0.1")
bazel_dep(name = "data1", version = "0.1", repo_name = "data1_from_rooty")
local_path_override(
    module_name = "data1",
    path = "../data1",
)

local_path_override(
    module_name = "pkg_with_runfiles",
    path = "../../..",
)

# The following is necessary to set up Go for the test binary.

bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.39.1")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Download an SDK for the host OS & architecture as well as common remote execution platforms.
go_sdk.download(version = "1.23.1")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
